# Lifi-pv-hardware-level-simulator-

./: .gitignore  CLAUDE.md  PLAN.md  PROJECT_SUMMARY.txt  README.md  SETUP_GUIDE.txt  TODO.md  cli.py  demo.py  git_error.txt  kxob25_receiver.cir  pyproject.toml  requirements-optional.txt  requirements.txt  sensitivity_analysis.py  test_all.py  test_regex_papers.py
.claude/: plan.md  settings.local.json
ai/: __init__.py  gemini_client.py  ocr_engine.py  ollama_client.py  paper_pipeline.py  parameter_validator.py  pdf_extractor.py  regex_extractor.py
budget/: integration_main_component.py  integration_spice_export.py  integration_thermal_sweep.py
components/: __init__.py  amplifiers.py  base.py  comparators.py  leds.py  mosfets.py  photodiodes.py  solar_cells.py
cosim/: __init__.py  channel.py  dcdc_model.py  engine_compare.py  ltspice_runner.py  modulation.py  ngspice_runner.py  noise.py  pipeline.py  pv_model.py  pwl_writer.py  python_engine.py  raw_parser.py  rx_chain.py  session.py  sim_result.py  spice_extract.py  spice_finder.py  system_config.py  tx_model.py
docs/: STRATEGIC_ANALYSIS.md
gui/: __init__.py  dialog_paper_reader.py  main_window.py  tab_channel_config.py  tab_component_library.py  tab_results.py  tab_schematics.py  tab_simulation_engine.py  tab_system_setup.py  tab_validation.py  theme.py  widgets.py  wizard.py
integration/: integration_adapter.py
materials/: __init__.py  properties.py  reference_data.py  semiconductors.py
papers/: __init__.py  correa_2025.py  gonzalez_2024.py  kadirvelu_2021.py  ofdm_modem.py  oliveira_2024.py  (+3 more)
(+85 files in other folders)
